# esp32-lifecycle-manager

./: .clangd  .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  enduser.md  generate_sig.sh  idf_component.yml  make_sig.sh  ota_signing_private.pem  ota_signing_public.pem  partitions.csv  sdkconfig  sdkconfig.defaults  sign_and_upload_release.py
.github/workflows/: ci.yml
bootloader_components/lcm_bootloader/: CMakeLists.txt  hooks.c
components/esp32-wifi-bootstrap/: CMakeLists.txt
components/esp32-wifi-bootstrap/content/: index.html.h
components/esp32-wifi-bootstrap/include/: safe_auto_connect.h  wifi_config.h
components/esp32-wifi-bootstrap/src/: ota_stub.c  safe_auto_connect.c  wifi_config.c
components/lcm/: CMakeLists.txt
components/lcm/src/: esp32-lcm.c
components/lcm32/: CMakeLists.txt  Kconfig  drd.c  idf_component.yml  lcm32.c  ota_sig.c  portal.c
components/lcm32/include/: drd.h  lcm32.h  ota_sig.h  portal.h
components/lcm_fast_reset/: CMakeLists.txt  lcm_fast_reset.c
components/lcm_fast_reset/include/: lcm_fast_reset.h
components/ota_lifecycle/: CMakeLists.txt  Kconfig  idf_component.yml  lifecycle_manager.c
components/ota_lifecycle/include/: esp32_lifecycle_manager.h
content/: index.html  index.html.h
docs/: imposr-migration-status.md  release-checklist.md  support-matrix.md
docs/architecture/: current-state.md  hardening-progress.md  target-state.md
docs/operations/: recovery-playbook.md
docs/security/: code-audit-2026-04-06.md  key-management.md  threat-model.md
example/led/: README.md  sdkconfig.defaults
example/led/main/: CMakeLists.txt  Kconfig.projbuild  esp32-lcm.c  esp32-lcm.h  esp32-wifi.c  esp32-wifi.h  homekit_custom_characteristics.h  idf_component.yml  main.c
examples/led/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/led/main/: CMakeLists.txt  Kconfig.projbuild  component.mk  esp32-lcm.c  esp32-lcm.h  idf_component.yml  main.c
imposr/: .eslintrc.json  .gitignore  jest.config.js  package-lock.json  package.json  tsconfig.json
imposr/.github/workflows/: ci.yml  release.yml  test.yml
imposr/docs/api-reference/: cli-reference.md  openapi.yaml  rest-api.md
imposr/docs/developer/: acrobat-install-readiness.md  acrobat-plugin-integration.md  architecture.md  beta-real-life-status.md  beta-target.md  packaging-plan.md  pr-beta-hardening-summary.md  production-audit-2026-04-21.md  real-life-go-live-checklist.md
imposr/docs/user-guide/: batch-processing.md  getting-started.md  templates.md  troubleshooting.md
imposr/installers/linux/: appimage  rpm
imposr/installers/linux/debian/: README.md
imposr/installers/macos/: build.sh
imposr/installers/windows/: build.ps1  installer.nsi
imposr/scripts/deploy/: package-acrobat-plugin.ts
imposr/src/analytics/: AnalyticsClient.ts  ErrorReporter.ts  TelemetryCollector.ts
imposr/src/api/: server.ts
imposr/src/api/controllers/: ImposeController.ts  JobController.ts  TemplateController.ts
imposr/src/api/middleware/: auth.ts  errorHandler.ts  rateLimit.ts  validation.ts
imposr/src/api/routes/: impose.ts  jobs.ts  templates.ts  webhooks.ts
imposr/src/beta/: BetaGoal.ts  BetaReadinessService.ts
imposr/src/cli/: index.ts
imposr/src/cli/commands/: batch.ts  beta.ts  impose.ts  templates.ts  validate.ts  watch.ts
imposr/src/cli/utils/: logger.ts
imposr/src/core/batch/: BatchProcessor.ts  JobQueue.ts  WorkerPool.ts
imposr/src/core/imposition/: ImpositionEngine.ts  LayoutCalculator.ts  PageArranger.ts
imposr/src/core/marks/: Bleed.ts  CropMarks.ts  RegistrationMarks.ts
imposr/src/core/pdf/: PDFExporter.ts  PDFLoader.ts  PDFProcessor.ts  PDFValidator.ts
imposr/src/licensing/: FeatureGate.ts  LicenseManager.ts  MachineId.ts  OfflineValidator.ts  PaymentHandler.ts
imposr/src/main/: index.ts  ipc-handlers.ts  menu.ts  window-manager.ts
imposr/src/renderer/: App.tsx
imposr/src/updater/: AutoUpdater.ts  UpdateChecker.ts  UpdateDownloader.ts
imposr/src/utils/: config.ts  crypto.ts  errors.ts  logger.ts  storage.ts
imposr/templates/standard/: 2up-a4-a3.json  4up-a4-a3.json  8up-a4-a2.json  booklet-16page.json  booklet-32page.json  booklet-8page.json  perfect-bound.json
imposr/tests/e2e/: app.e2e.test.ts  batch.e2e.test.ts  licensing.e2e.test.ts
imposr/tests/integration/: batch-processing.test.ts  licensing-flow.test.ts  pdf-workflow.test.ts  template-system.test.ts
include/: github_update.h
keys/: README.md  custom_public_key.example.h  official_public_key.h  ota_signing_private.pem  ota_signing_public.pem
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  esp32-lcm.c  form_urlencoded.c  github_update.c  html_utils.c  idf_component.yml  lcm_key_provider.c  lifecycle_reset.c  lifecycle_restart_counter.c  main.c  nvs_store.c  nvs_utils.c  ota.c  ota_pubkey.c  version.h  wifi_config.c  wifi_config_util.c
main/content/: index.html  index.html.h
main/include/: form_urlencoded.h  github_update.h  html_utils.h  lcm_key_provider.h  led_indicator.h  lifecycle_manager.h  lifecycle_restart_counter.h  nvs_keys.h  nvs_store.h  nvs_utils.h  ota.h  ota_pubkey.h  wifi_config.h
scripts/: build_official_targets.sh  generate_keys.sh  provision_nvs_keys.sh  sign.py  sign_firmware.sh
src/: github_update.c  wifi_config.c
tests/: test_html_utils.c  test_signature_and_repo.py
(+79 files in other folders)
